[gd_scene load_steps=7 format=2]

[ext_resource path="res://components/common/Player.gd" type="Script" id=1]
[ext_resource path="res://sounds/player_collision.wav" type="AudioStream" id=2]
[ext_resource path="res://sounds/player_move.wav" type="AudioStream" id=3]
[ext_resource path="res://components/common/Destroyable.tscn" type="PackedScene" id=4]
[ext_resource path="res://components/common/SwipeDetector.tscn" type="PackedScene" id=5]

[sub_resource type="CircleShape2D" id=1]
radius = 0.01

[node name="Player" type="KinematicBody2D"]
script = ExtResource( 1 )

[node name="Collision" type="CollisionShape2D" parent="."]
shape = SubResource( 1 )

[node name="SoundCollision" type="AudioStreamPlayer2D" parent="."]
stream = ExtResource( 2 )

[node name="SoundMove" type="AudioStreamPlayer2D" parent="."]
stream = ExtResource( 3 )
volume_db = -15.0

[node name="Destroyable" parent="." instance=ExtResource( 4 )]

[node name="SwipeDetector" parent="." instance=ExtResource( 5 )]
